--- a/personajes.html
+++ b/personajes.html
@@ -50,19 +50,19 @@
     <article>
       <h1>Personajes</h1>
       <div>
-        <a href="#Lleo."> <img  src="imagenes/personajes/Lleo.jpg" alt="Lleo"> </a>
-        <a href="#Jordi"> <img  src="imagenes/personajes/Jordi.jpg" alt="Jordi"> </a>
-        <a href="#Cristina"> <img  src="imagenes/personajes/Cristina.jpg" alt="Cristina"> </a>
-        <a href="#Tony"> <img src="imagenes/personajes/Tony.jpg" alt="Tony"> </a>
-        <a href="#Ignasi"> <img  src="imagenes/personajes/Ignasi.jpg" alt="Ignasi"> </a>
-        <a href="#Roc"> <img  src="imagenes/personajes/Roc.jpg" alt="Roc"> </a>
+        <a href="#Lleo."> <img  src="imagenes/personajes/lleo.jpg" alt="Lleo"> </a>
+        <a href="#Jordi"> <img  src="imagenes/personajes/lordi.jpg" alt="Jordi"> </a>
+        <a href="#Cristina"> <img  src="imagenes/personajes/cristina.jpg" alt="Cristina"> </a>
+        <a href="#Tony"> <img src="imagenes/personajes/tony.jpg" alt="Tony"> </a>
+        <a href="#Ignasi"> <img  src="imagenes/personajes/ignasi.jpg" alt="Ignasi"> </a>
+        <a href="#Roc"> <img  src="imagenes/personajes/roc.jpg" alt="Roc"> </a>
 
       </div>
     </article>
 
     <article class="principal">
       <div>
-        <img class="img-personaje" src="imagenes/personajes/Lleo.jpg" alt="Lleo">
+        <img class="img-personaje" src="imagenes/personajes/lleo.jpg" alt="Lleo">
         <div>
          <h2>Lleo</h2>
          <p>Lleó (Àlex Monner). El líder del grupo de los Pulseras Rojas. Tiene casi 15 años y está en el hospital desde muy pequeño. Tuvo cáncer de tibia y por eso tiene la pierna derecha amputada, también tiene cáncer de pulmón. Como es el que lleva más tiempo ingresado es el veterano del grupo y siempre le visita su hermana Gavina, que es como su segunda madre, luego de que ésta falleciera. Su padre no se preocupa demasiado por él desde que su esposa ha muerto. Al final de la segunda temporada cumple con una promesa que le hizo a Benito, ya que salió del hospital para cumplir la promesa. Como presiente que va a morir por su diagnóstico, marcha a cumplir la promesa igual que un león en libertad.</p>
