--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/estilos.css">
   <link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <title>Pulseras Rojas</title>
 </head>
 <body>
@@ -13,7 +17,7 @@
       <div class="logo"> 
 
 
-        <a href="index.html"><img src="imagenes/Logo.jpg" alt="Logo de Pulseras Rojas"></a>
+        <a href="index.html"><img src="imagenes/logo.jpg" alt="Logo de Pulseras Rojas"></a>
         <a href="#"><h2 class="nombre-puleras">Pulseras Rojas</h2></a>
       </div>
 
@@ -51,7 +55,9 @@
 
 
 <section>
-            <h1>CONTACTO</h1>
+            <article class="contacto">
+              <h1>CONTACTO</h1>
+            </article>
             <article class="principal">
                 <form class="form">
                     <h3 class="contacto">ESCRIBINOS</h3>
@@ -82,6 +88,15 @@
 
   </footer>
 
-
+    <script type="text/javascript">
+        function myFunction() {
+          var x = document.getElementById("menu_bar");
+          if (x.className === "") {
+            x.className += " responsive";
+          } else {
+            x.className = "";
+          }
+        }
+    </script>
 </body>
 </html>
