--- a/personajes.html
+++ b/personajes.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/estilos.css">
   <link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
 	<title>Pulseras Rojas</title>
 </head>
 <body>
@@ -15,6 +21,9 @@
 			<a href="index.html"><img src="imagenes/logo.jpg" alt="Logo de Pulseras Rojas"></a>
       <a href="#"><h2 class="nombre-puleras">Pulseras Rojas</h2></a>
 		</div>
+
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+
     	<nav id="menu_bar" class="">
 
 
@@ -51,7 +60,7 @@
       <h1>Personajes</h1>
       <div>
         <a href="#Lleo."> <img  src="imagenes/personajes/lleo.jpg" alt="Lleo"> </a>
-        <a href="#Jordi"> <img  src="imagenes/personajes/lordi.jpg" alt="Jordi"> </a>
+        <a href="#Jordi"> <img  src="imagenes/personajes/jordi.jpg" alt="Jordi"> </a>
         <a href="#Cristina"> <img  src="imagenes/personajes/cristina.jpg" alt="Cristina"> </a>
         <a href="#Tony"> <img src="imagenes/personajes/tony.jpg" alt="Tony"> </a>
         <a href="#Ignasi"> <img  src="imagenes/personajes/ignasi.jpg" alt="Ignasi"> </a>
@@ -65,29 +74,29 @@
         <img class="img-personaje" src="imagenes/personajes/lleo.jpg" alt="Lleo">
         <div>
          <h2>Lleo</h2>
-         <p>Lleó (Àlex Monner). El líder del grupo de los Pulseras Rojas. Tiene casi 15 años y está en el hospital desde muy pequeño. Tuvo cáncer de tibia y por eso tiene la pierna derecha amputada, también tiene cáncer de pulmón. Como es el que lleva más tiempo ingresado es el veterano del grupo y siempre le visita su hermana Gavina, que es como su segunda madre, luego de que ésta falleciera. Su padre no se preocupa demasiado por él desde que su esposa ha muerto. Al final de la segunda temporada cumple con una promesa que le hizo a Benito, ya que salió del hospital para cumplir la promesa. Como presiente que va a morir por su diagnóstico, marcha a cumplir la promesa igual que un león en libertad.</p>
+         <p>Lleó (<strong>Àlex Monner</strong>). El <strong>líder</strong> del grupo de los Pulseras Rojas. Tiene casi 15 años y está en el hospital desde muy pequeño. Tuvo <strong>cáncer</strong> de tibia y por eso tiene la pierna derecha amputada, también tiene cáncer de pulmón. Como es el que lleva más tiempo ingresado es el veterano del grupo y siempre le visita su hermana <strong>Gavina</strong>, que es como su segunda madre, luego de que ésta falleciera. Su padre no se preocupa demasiado por él desde que su esposa ha muerto. Al final de la segunda temporada cumple con una promesa que le hizo a <strong>Benito</strong>, ya que salió del hospital para cumplir la promesa. Como presiente que va a morir por su diagnóstico, marcha a cumplir la promesa igual que un león en libertad.</p>
         </div>
       <div>
     </article>
 
     <article class="principal">
       <div>
-        <img class="img-personaje" src="imagenes/personajes/Jordi.jpg" alt="Jordi">
+        <img class="img-personaje" src="imagenes/personajes/jordi.jpg" alt="Jordi">
         <div>
          <h2>Jordi</h2>
-         <p>Jordi (Igor Szpakowski). El segundo líder. Llega al hospital a principios de la serie y comparte habitación con Lleó (Primera Temporada). Tiene 15 años. Tiene cáncer de tibia y le tienen que amputar la pierna derecha. Viene de Andorra.
-          Su relacion con Lleo crece y se intensifica porque ambos tiene cancer y Lleo al ser el primero de los dos en tenerlo, le ayuda en el proceso de entender por lo que esta pasando y por lo que va a pasar en el futuro.</p>
+         <p>Jordi (<strong>Igor Szpakowski</strong>). El <strong>segundo líder</strong>. Llega al hospital a principios de la serie y comparte habitación con <strong>Lleó</strong> (Primera Temporada). Tiene 15 años. Tiene <strong>cáncer</strong> de tibia y le tienen que amputar la pierna derecha. Viene de Andorra.
+         Su relacion con Lleo crece y se intensifica porque ambos tiene cancer y Lleo al ser el primero de los dos en tenerlo, le ayuda en el proceso de entender por lo que esta pasando y por lo que va a pasar en el futuro.</p>
         <div>
       </div>
     </article>
 
     <article class="principal">
       <div>
-        <img class="img-personaje" src="imagenes/personajes/Cristina.jpg" alt="Cristina">
+        <img class="img-personaje" src="imagenes/personajes/cristina.jpg" alt="Cristina">
         <div>
           <h2>Cristina</h2>
-          <p>Cristina (Joana Vilapuig) La chica del grupo. Es la única chica de los "Pulseras". Vive en otra planta, y tiene anorexia. Quién se ocupa de ella es su hermana Carol, que se preocupa por su alimentación.
-            Conoce a Lleo en la habitacion de aprendizaje del hospital para aquellos niños que van a pasar mucho tiempo dentro de èl y no quieren atrasarse en sus estudios. Sin embargo es en su segundo encuentro cuando Lleo le ofrece pertenecer al grupo de los Pulseras Rojas.
+          <p>Cristina (<strong>Joana Vilapuig</strong>) La <strong>chica del grupo</strong>, es la única chica de los "Pulseras". Vive en otra planta, y tiene <strong>anorexia</strong>. Quién se ocupa de ella es su hermana <strong>Carol</strong>, que se preocupa por su alimentación.
+          Conoce a <strong>Lleo</strong> en la habitacion de aprendizaje del hospital para aquellos niños que van a pasar mucho tiempo dentro de èl y no quieren atrasarse en sus estudios. Sin embargo, es en su segundo encuentro cuando Lleo le ofrece pertenecer al grupo de los <strong>Pulseras Rojas</strong>.
           </p>
         </div>
       </div>
@@ -96,10 +105,10 @@
 
     <article class="principal">
       <div>
-        <img class="img-personaje" src="imagenes/personajes/Tony.jpg" alt="Tony">
+        <img class="img-personaje" src="imagenes/personajes/tony.jpg" alt="Tony">
         <div>
           <h2>Tony</h2>
-          <p>Toni (Marc Balaguer). El listo del grupo. Es el mayor de los Pulseras, con 17 años, pero parece un niño pequeño. Tiene Síndrome de Asperger. Entra al hospital por un accidente de moto. Tiene problemas porque condujo la moto siendo menor de edad y su abuelo está preocupado porque puedan quitarle la custodia. Su padres murieron en un accidente y vive con su abuelo, quién debe afrontar un juicio acerca de la custodia.</p>
+          <p>Tony (<strong>Marc Balaguer</strong>). El <strong>listo del grupo</strong>. Es el mayor de los Pulseras, con 17 años, pero parece un niño pequeño. Tiene Síndrome de <strong>Asperger</strong>. Entra al hospital por un accidente de moto. Tiene problemas porque condujo la moto siendo menor de edad y su <strong>abuelo</strong> está preocupado porque puedan quitarle la custodia. Su padres murieron en un accidente y vive con su abuelo, quién debe afrontar un juicio acerca de la custodia.</p>
         </div>
       </div>
     </article>
@@ -107,10 +116,10 @@
 
     <article class="principal">
       <div>
-        <img class="img-personaje" src="imagenes/personajes/Ignasi.jpg" alt="Ignasi">
+        <img class="img-personaje" src="imagenes/personajes/ignasi.jpg" alt="Ignasi">
         <div>
           <h2>Ignasi</h2>
-          <p>Ignasi (Mikel Iglesias) El guapo del grupo. Llega al hospital por un desmayo y se queda en el hospital. Al principio no quiere amigos, pero con el tiempo se une a los pulseras. Tiene una enfermedad del corazón. Su padre no lo va a visitar, pero su madrastra Lourdes va cuando puede (es como su madre). También le visita un compañero de clase que le lleva juegos y apuntes del colegio.
+          <p>Ignasi (<strong>Mikel Iglesias</strong>) El <strong>guapo del grupo</strong>. Llega al hospital por un desmayo y se queda en el hospital. Al principio no quiere amigos, pero con el tiempo se une a los pulseras. Tiene una <strong>enfermedad del corazón</strong>. Su padre no lo va a visitar, pero su madrastra <strong>Lourdes</strong> va cuando puede (es como su madre). También le visita un compañero de clase que le lleva juegos y apuntes del colegio.
           Es bastante cerrado y poco sincero a la hora de expresar sentimientos, pero en poco tiempo el grupo de los pulseras le hace sentir algo que no habia comprendido antes, la razon del porquè valorar a tus seres queridos</p>
         </div>
       </div>
@@ -118,11 +127,11 @@
 
     <article class="principal">
       <div>
-        <img class="img-personaje" src="imagenes/personajes/Roc.jpg" alt="Roc">
+        <img class="img-personaje" src="imagenes/personajes/roc.jpg" alt="Roc">
         <div>
           <h2>Roc</h2>
-          <p>Roc (Nil Cardoner). El imprescindible del grupo, aquel que sin èl el grupo no seria igual. Es el más pequeño del grupo, con sólo 10 años. Está en coma desde hace dos años por una caída de un trampolín en una piscina. Su madre siempre va a visitarlo la cual se siente culpable ya que fue ella quien le dijo que lo hiciera. Tiene una relación muy especial con Toni, porque puede hablar con él aunque esté en coma.
-          Al principio les cuesta creelo pero luego los pulseras deciden creer en Tony, quien se convierte en un intermediario entre ellos y Roc para que puedan comunicarse</p>
+          <p>Roc (<strong>Nil Cardoner</strong>). El <strong>imprescindible del grupo</strong>, aquel que sin èl el grupo no seria igual. Es el más pequeño del grupo, con sólo 10 años. Está <strong>en coma</strong> desde hace dos años por una caída de un trampolín en una piscina. Su <strong>madre</strong> siempre va a visitarlo la cual se siente culpable ya que fue ella quien le dijo que lo hiciera. Tiene una relación muy especial con <strong>Tony</strong>, porque puede hablar con él aunque esté en coma.
+          Al principio les cuesta creerlo pero luego los pulseras deciden creer en Tony, quien se convierte en un intermediario entre ellos y Roc para que puedan comunicarse</p>
         </div>
       </div>
     </article>
@@ -130,16 +139,6 @@
 
 
   </section>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -158,7 +157,16 @@
     </div>
 
   </footer>
-
+    <script type="text/javascript">
+        function myFunction() {
+          var x = document.getElementById("menu_bar");
+          if (x.className === "") {
+            x.className += " responsive";
+          } else {
+            x.className = "";
+          }
+        }
+    </script>
 
 </body>
 </html>
