actualizacion final de pagina
diseños y adaptación móvil actualizados

--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
 
 
         <a href="index.html"><img src="imagenes/logo.jpg" alt="Logo de Pulseras Rojas"></a>
-        <a href="#"><h2 class="nombre-puleras">Pulseras Rojas</h2></a>
+        <a href="index.html"><h2 class="nombre-puleras">Pulseras <span>Rojas</span></h2></a>
       </div>
 
       <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
@@ -28,25 +28,10 @@
 
        <ul class="encabezado">
          <li><a href="index.html">La Serie</a></li>
-         <li><a href="personajes.html">Personajes</a>
-           <ul class ="encabezado-vertical">
-              <li><a href="personajes.html#Lleo">Lleo</a></li>
-              <li><a href="personajes.html#Jordi">Jordi</a><li>
-              <li><a href="personajes.html#Cristina">Cristina</a></li>
-              <li><a href="personajes.html#Tony">Tony</a></li>
-              <li><a href="personajes.html#Ignasi">Ignasi</a></li> 
-              <li><a href="personajes.html#Roc">Roc</a></li>
-
-           </ul>
-         </li>
+         <li><a href="personajes.html">Personajes</a></li>
          <li><a href="galeria.html">Galería</a></li>
-         <li><a href="a-cerca-de.html">A cerca de</a>
-            <ul class = "encabezado-vertical">
-                <li><a href="a-cerca-de.html#Autor">Autor</a></li>
-                <li><a href="a-cerca-de.html#Música">Música</a></li>
-                <li><a href="a-cerca-de.html#Criticas">Criticas</a></li>
-           </ul>
-         </li>
+         <li><a href="a-cerca-de.html">A cerca de</a></li>
+          
          <li><a href="contacto.html">Contacto</a></li>
        </ul>
        </nav>
@@ -55,10 +40,9 @@
 
 
 <section>
-            <article class="contacto">
-              <h1>CONTACTO</h1>
-            </article>
-            <article class="principal">
+         <article class="principal">
+               <h1>CONTACTO</h1>
+               <div class="contorno">
                 <form class="form">
                     <h3 class="contacto">ESCRIBINOS</h3>
                     <input placeholder="Nombre..."></input>
@@ -67,9 +51,12 @@
                     <button>Enviar</button>
                     <div class="pie_contacto">
                         <span class="fa fa-phone"></span> 054 11 5555 5555
-                        <span class="fa fa-envelope-o"></span> contacto@pixar.com
+                        <span class="fa fa-envelope-o"></span> contacto@pulserasrojas.com
                     </div>
+
                 </form>
+                <img class="img-contacto" src="imagenes/contacto.jpg" alt="las manos de los pulseras rojas enfocando sus pulseras" /> 
+                </div>
         </article>
     </section>
 
@@ -77,13 +64,15 @@
 
 
 
- <footer class="pie-pagina">
+ <footer>
 
     <div> 
       <a href="#"> <img class="red" src="imagenes/redes/facebook.png" alt="Facebook"></a>
       <a href="#"> <img class="red" src="imagenes/redes/twitter.png" alt="Twitter"></a>
       <a href="#"> <img class="red" src="imagenes/redes/youtube.png" alt="Youtube"></a>
       <a href="#"> <img class="red" src="imagenes/redes/instagram.png" alt="Instagram"></a>
+     <p>&copy; Todos los derechos reservados. Villarreal Candela Nahir.</p>
+
     </div>
 
   </footer>
