--- a/personajes.html
+++ b/personajes.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/estilos.css">
   <link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
-
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
@@ -19,7 +17,7 @@
 		<div class="logo"> 
 
 			<a href="index.html"><img src="imagenes/logo.jpg" alt="Logo de Pulseras Rojas"></a>
-      <a href="#"><h2 class="nombre-puleras">Pulseras Rojas</h2></a>
+      <a href="index.html"><h2 class="nombre-puleras">Pulseras <span>Rojas</span></h2></a>
 		</div>
 
     <a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
@@ -30,25 +28,9 @@
      	 <ul class="encabezado">
        	 <li><a href="index.html">La Serie</a></li>
 
-       	 <li><a href="personajes.html">Personajes</a>
-         	 <ul class="encabezado-vertical">
-           	 	<li><a href="personajes.html#Lleo">Lleo</a></li>
-           		<li><a href="personajes.html#Jordi">Jordi</a></li>
-           		<li><a href="personajes.html#Cristina">Cristina</a></li>
-           		<li><a href="personajes.html#Tony">Tony</a></li>
-           		<li><a href="personajes.html#Ignasi">Ignasi</a></li> 
-           		<li><a href="personajes.html#Roc">Roc</a></li>
-
-        	 </ul>
-       	 </li>
+       	 <li><a href="personajes.html">Personajes</a></li>
        	 <li><a href="galeria.html">Galería</a></li>
-       	 <li><a href="a-cerca-de.html">A cerca de</a>
-        	  <ul class="encabezado-vertical">
-          	  	<li><a href="a-cerca-de.html#Autor">Autor</a></li>
-          	  	<li><a href="a-cerca-de.html#Música">Música</a></li>
-          	  	<li><a href="a-cerca-de.html#Criticas">Criticas</a></li>
-         	 </ul>
-       	 </li>
+       	 <li><a href="a-cerca-de.html">A cerca de</a></li>
        	 <li><a href="contacto.html">Contacto</a></li>
      	 </ul>
    		 </nav>
@@ -57,53 +39,56 @@
 
   <section>
     <article>
-      <h1>Personajes</h1>
-      <div>
-        <a href="#Lleo."> <img  src="imagenes/personajes/lleo.jpg" alt="Lleo"> </a>
-        <a href="#Jordi"> <img  src="imagenes/personajes/jordi.jpg" alt="Jordi"> </a>
-        <a href="#Cristina"> <img  src="imagenes/personajes/cristina.jpg" alt="Cristina"> </a>
-        <a href="#Tony"> <img src="imagenes/personajes/tony.jpg" alt="Tony"> </a>
-        <a href="#Ignasi"> <img  src="imagenes/personajes/ignasi.jpg" alt="Ignasi"> </a>
-        <a href="#Roc"> <img  src="imagenes/personajes/roc.jpg" alt="Roc"> </a>
+      <h1>PERSONAJES</h1>
+      <div class="filas">
+        <a href="#lleo"> <img class="animacion" src="imagenes/personajes/lleo.jpg" alt="Lleo">  </a>
+        <a href="#jordi"> <img img class="animacion" src="imagenes/personajes/jordi.jpg" alt="Jordi"> </a>
+        <a href="#cristina"> <img img class="animacion" src="imagenes/personajes/cristina.jpg" alt="Cristina"> </a>
+        <a href="#tony"> <img img class="animacion" src="imagenes/personajes/tony.jpg" alt="Tony"> </a>
+        <a href="#ignasi"> <img img class="animacion" src="imagenes/personajes/ignasi.jpg" alt="Ignasi"> </a>
+        <a href="#roc"> <img img class="animacion" src="imagenes/personajes/roc.jpg" alt="Roc"> </a>
 
       </div>
     </article>
 
-    <article class="principal">
+    <article class="principal" id="lleo">
       <div>
-        <img class="img-personaje" src="imagenes/personajes/lleo.jpg" alt="Lleo">
+         <img class="img-personaje" src="imagenes/personajes/lleo.jpg" alt="Lleo">
+
         <div>
          <h2>Lleo</h2>
-         <p>Lleó (<strong>Àlex Monner</strong>). El <strong>líder</strong> del grupo de los Pulseras Rojas. Tiene casi 15 años y está en el hospital desde muy pequeño. Tuvo <strong>cáncer</strong> de tibia y por eso tiene la pierna derecha amputada, también tiene cáncer de pulmón. Como es el que lleva más tiempo ingresado es el veterano del grupo y siempre le visita su hermana <strong>Gavina</strong>, que es como su segunda madre, luego de que ésta falleciera. Su padre no se preocupa demasiado por él desde que su esposa ha muerto. Al final de la segunda temporada cumple con una promesa que le hizo a <strong>Benito</strong>, ya que salió del hospital para cumplir la promesa. Como presiente que va a morir por su diagnóstico, marcha a cumplir la promesa igual que un león en libertad.</p>
+         <p>Lleó (<strong>Àlex Monner</strong>). El <strong>líder</strong> del grupo de los Pulseras Rojas. Tiene casi 15 años y está en el hospital desde muy pequeño. Tuvo <strong>cáncer</strong> de tibia y por eso tiene la pierna derecha amputada, también tiene cáncer de pulmón. Como es el que lleva más tiempo ingresado es el veterano del grupo y siempre le visita su hermana <strong>Gavina</strong>, que es como su segunda madre, luego de que ésta falleciera. Su padre no se preocupa demasiado por él desde que su esposa ha muerto.</p>
+         <p>
+          Al final de la segunda temporada cumple con una promesa que le hizo a <strong>Benito</strong>, ya que salió del hospital para cumplir la promesa. Como presiente que va a morir por su diagnóstico, marcha a cumplir la promesa igual que un león en libertad.</p>
         </div>
       <div>
     </article>
 
-    <article class="principal">
+    <article class="principal" id="jordi">
       <div>
         <img class="img-personaje" src="imagenes/personajes/jordi.jpg" alt="Jordi">
         <div>
          <h2>Jordi</h2>
-         <p>Jordi (<strong>Igor Szpakowski</strong>). El <strong>segundo líder</strong>. Llega al hospital a principios de la serie y comparte habitación con <strong>Lleó</strong> (Primera Temporada). Tiene 15 años. Tiene <strong>cáncer</strong> de tibia y le tienen que amputar la pierna derecha. Viene de Andorra.
-         Su relacion con Lleo crece y se intensifica porque ambos tiene cancer y Lleo al ser el primero de los dos en tenerlo, le ayuda en el proceso de entender por lo que esta pasando y por lo que va a pasar en el futuro.</p>
+         <p>Jordi (<strong>Igor Szpakowski</strong>). El <strong>segundo líder</strong>. Llega al hospital a principios de la serie y comparte habitación con <strong>Lleó</strong> (Primera Temporada). Tiene 15 años. Tiene <strong>cáncer</strong> de tibia y le tienen que amputar la pierna derecha. Viene de Andorra.</p>
+         <p>Su relacion con Lleo crece y se intensifica porque ambos tiene cancer y Lleo al ser el primero de los dos en tenerlo, le ayuda en el proceso de entender por lo que esta pasando y por lo que va a pasar en el futuro.</p>
         <div>
       </div>
     </article>
 
-    <article class="principal">
+    <article class="principal" id="cristina">
       <div>
         <img class="img-personaje" src="imagenes/personajes/cristina.jpg" alt="Cristina">
         <div>
           <h2>Cristina</h2>
-          <p>Cristina (<strong>Joana Vilapuig</strong>) La <strong>chica del grupo</strong>, es la única chica de los "Pulseras". Vive en otra planta, y tiene <strong>anorexia</strong>. Quién se ocupa de ella es su hermana <strong>Carol</strong>, que se preocupa por su alimentación.
-          Conoce a <strong>Lleo</strong> en la habitacion de aprendizaje del hospital para aquellos niños que van a pasar mucho tiempo dentro de èl y no quieren atrasarse en sus estudios. Sin embargo, es en su segundo encuentro cuando Lleo le ofrece pertenecer al grupo de los <strong>Pulseras Rojas</strong>.
+          <p>Cristina (<strong>Joana Vilapuig</strong>) La <strong>chica del grupo</strong>, es la única chica de los "Pulseras". Vive en otra planta, y tiene <strong>anorexia</strong>. Quién se ocupa de ella es su hermana <strong>Carol</strong>, que se preocupa por su alimentación.</p>
+          <p>Conoce a <strong>Lleo</strong> en la habitacion de aprendizaje del hospital para aquellos niños que van a pasar mucho tiempo dentro de èl y no quieren atrasarse en sus estudios. Sin embargo, es en su segundo encuentro cuando Lleo le ofrece pertenecer al grupo de los <strong>Pulseras Rojas</strong>.
           </p>
         </div>
       </div>
 
     </article>
 
-    <article class="principal">
+    <article class="principal" id="tony">
       <div>
         <img class="img-personaje" src="imagenes/personajes/tony.jpg" alt="Tony">
         <div>
@@ -114,24 +99,27 @@
     </article>
 
 
-    <article class="principal">
+    <article class="principal" id="ignasi">
       <div>
         <img class="img-personaje" src="imagenes/personajes/ignasi.jpg" alt="Ignasi">
         <div>
           <h2>Ignasi</h2>
-          <p>Ignasi (<strong>Mikel Iglesias</strong>) El <strong>guapo del grupo</strong>. Llega al hospital por un desmayo y se queda en el hospital. Al principio no quiere amigos, pero con el tiempo se une a los pulseras. Tiene una <strong>enfermedad del corazón</strong>. Su padre no lo va a visitar, pero su madrastra <strong>Lourdes</strong> va cuando puede (es como su madre). También le visita un compañero de clase que le lleva juegos y apuntes del colegio.
-          Es bastante cerrado y poco sincero a la hora de expresar sentimientos, pero en poco tiempo el grupo de los pulseras le hace sentir algo que no habia comprendido antes, la razon del porquè valorar a tus seres queridos</p>
+          <p>Ignasi (<strong>Mikel Iglesias</strong>) El <strong>guapo del grupo</strong>. Llega al hospital por un desmayo y se queda en el hospital. Al principio no quiere amigos, pero con el tiempo se une a los pulseras. Tiene una <strong>enfermedad del corazón</strong>. Su padre no lo va a visitar, pero su madrastra <strong>Lourdes</strong> va cuando puede (es como su madre). También le visita un compañero de clase que le lleva juegos y apuntes del colegio.</p>
+          <p>
+          Es bastante cerrado y poco sincero a la hora de expresar sentimientos, pero en poco tiempo el grupo de los pulseras le hace sentir algo que no habia comprendido antes, la razon del porquè valorar a tus seres queridos.</p>
         </div>
       </div>
     </article>
 
-    <article class="principal">
+    <article class="principal" id="roc">
       <div>
         <img class="img-personaje" src="imagenes/personajes/roc.jpg" alt="Roc">
         <div>
           <h2>Roc</h2>
-          <p>Roc (<strong>Nil Cardoner</strong>). El <strong>imprescindible del grupo</strong>, aquel que sin èl el grupo no seria igual. Es el más pequeño del grupo, con sólo 10 años. Está <strong>en coma</strong> desde hace dos años por una caída de un trampolín en una piscina. Su <strong>madre</strong> siempre va a visitarlo la cual se siente culpable ya que fue ella quien le dijo que lo hiciera. Tiene una relación muy especial con <strong>Tony</strong>, porque puede hablar con él aunque esté en coma.
-          Al principio les cuesta creerlo pero luego los pulseras deciden creer en Tony, quien se convierte en un intermediario entre ellos y Roc para que puedan comunicarse</p>
+          <p>Roc (<strong>Nil Cardoner</strong>). El <strong>imprescindible del grupo</strong>, aquel que sin èl el grupo no seria igual. Es el más pequeño del grupo, con sólo 10 años. Está <strong>en coma</strong> desde hace dos años por una caída de un trampolín en una piscina.
+           Su <strong>madre</strong> siempre va a visitarlo la cual se siente culpable ya que fue ella quien le dijo que lo hiciera. </p>
+          <p>Tiene una relación muy especial con <strong>Tony</strong>, porque puede hablar con él aunque esté en coma.
+          Al principio les cuesta creerlo pero luego los pulseras deciden creer en Tony, quien se convierte en un intermediario entre ellos y Roc para que puedan comunicarse.</p>
         </div>
       </div>
     </article>
@@ -147,13 +135,15 @@
 
 
 
- <footer class="pie-pagina">
+ <footer >
 
     <div> 
      <a href="#"> <img class="red" src="imagenes/redes/facebook.png" alt="Facebook"></a>
      <a href="#"> <img class="red" src="imagenes/redes/twitter.png" alt="Twitter"></a>
      <a href="#"> <img class="red" src="imagenes/redes/youtube.png" alt="Youtube"></a>
      <a href="#"> <img class="red" src="imagenes/redes/instagram.png" alt="Instagram"></a>
+
+    <p>&copy; Todos los derechos reservados. Villarreal Candela Nahir.</p>
     </div>
 
   </footer>
@@ -170,3 +160,4 @@
 
 </body>
 </html>
+
