--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p >Polseres Vermelles (Pulseras Rojas) fue escrita por <strong>Albert Espinosa</strong>  y dirigida por <strong>Pau Freixas</strong>.
           Cuenta con 2 temporadas y contiene un total de 28 capitulos de aproximadamente 42 minutos cada uno. 
           Es una serie española que tiene como idioma original el <strong>catalan</strong>.
-          <span class="blanco">..............................................................................................</span>
+          <span class="blanco">...................................................................................... ..............</span>
           Su primera emision fue el 24 de enero de 2011.
           Su ultima emision fue el 22 de abril de 2013.
           Asi mismo, la serie pulseras rojas es basada en la novela de Albert Espinosa <strong>"El mundo Amarillo."</strong></p>
